--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -30,6 +30,10 @@
                     <div class="tour-content">
                         <h3 class="title is-4">About this tour</h3>
                         <p>{{ item.tour_desc }}</p>
+                        <br>
+                        {% for location in item.tour_location %}
+                        <span class="tag is-success">{{ location }}</span>
+                        {% endfor %}
                     </div>
                 </div>
             </div>
@@ -50,11 +54,12 @@
     </div>
 </section>
 
-<section class="section" style="">
-    <div class="container">
 
-        <!-- <div class='box'>
-            <h1 class='title has-text-centered'>Tour Itinerary</h1>
+<section class="section" style="padding-top: 5rem">
+    <div class="container">
+        <h1 class='title'>Tour Itinerary</h1>
+
+        <div class='box'>
             <div class='timeline is-centered'>
                 <header class="timeline-header">
                     <span class="tag is-medium is-primary">Start Tour!</span>
@@ -77,7 +82,7 @@
                     <span class="tag is-medium is-primary">End</span>
                 </div>
             </div>
-        </div> -->
+        </div>
 
         <!--Start of review cards-->
             <h1 class='title'>Reviews for this tour</h1>
