--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -10,14 +10,14 @@
 <section class="section" style="padding-top: 5rem">
     <div class="container">
         <div class="box">
-            <div class="tour-img" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}');">
+            <div class="tour-img" style="background-image: url('data:image/jpeg;base64, {{ userData['name'] }}');">
                 <h1 class="title has-text-white is-1">{{ item.tour_name }}</h1>
             </div>
             <div class="columns pt-3 is-variable is-5 p-5">
                 <div class="column is-one-quarter">
                     <h3 class="title is-4">Tour guide</h3>
                     <div class="box mb-2 list-author has-background-black">
-                        <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{item['tg_img']}}');"></div>
+                        <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ userData['profile_img'] }}');"></div>
                         <div class="ml-2 has-text-white"><b>{{ item['tg_name'] }}</b></div>
                     </div>
                     <hr>
