--- a/templates/tourGuides/ownlisting.html
+++ b/templates/tourGuides/ownlisting.html
@@ -26,8 +26,8 @@
                                 <div class="column">
                                     <div class="ml-4">
                                         <div class="mb-2 listing-author">
-                                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
-                                            <div class="ml-2"><b>HidethePain</b> is offering:</div>
+                                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ userData['profile_img'] }}');"></div>
+                                            <div class="ml-2"><b>{{ userData['name'] }}</b> is offering:</div>
                                         </div>
                                         <h1 class='title'>{{ item.tour_name }}</h1>
                                         <p class="subtitle">{{ item.tour_desc }}</p>
