--- a/templates/base.html
+++ b/templates/base.html
@@ -22,8 +22,8 @@
         {# crossorigin="anonymous"></script>#}
     {#
     <script>#}
-        {#            Turbolinks.start()# }
-        {#        </script>#}
+        {#Turbolinks.start()# }
+        {#</script>#}
     {% endblock %}
 
     {% block scripts %}
@@ -83,7 +83,7 @@
                     </a>
                     <div class="navbar-item has-dropdown is-hoverable">
                         <a class="navbar-item">
-                            <div class="profile-img" style="background-image: url('/pfp.jpg');"></div>
+                            <div class="profile-img" style="background-image: url('data:image/jpeg;base64, {{ user.profile_img }}');"></div>
                         </a>
 
                         <div class="navbar-dropdown is-boxed is-right">
