--- a/templates/customer/tourListing.html
+++ b/templates/customer/tourListing.html
@@ -10,7 +10,7 @@
 <section class="section" style="padding-top: 5rem">
     <div class="container">
         <div class="box">
-            <div class="tour-img" style="background-image: url('data:image/jpeg;base64, {{ userData['name'] }}');">
+            <div class="tour-img" style="background-image: url('data:image/jpeg;base64, {{ item['tour_img'] }}');">
                 <h1 class="title has-text-white is-1">{{ item.tour_name }}</h1>
             </div>
             <div class="columns pt-3 is-variable is-5 p-5">
