--- a/templates/helpdesk.html
+++ b/templates/helpdesk.html
@@ -1,60 +1,70 @@
 {% extends 'base.html' %}
 
 {% block scripts %}
-<link rel="stylesheet" href="/css/global/shop.css">
-<link rel="stylesheet" href="/css/pages/support.css">
+    <link rel="stylesheet" href="/css/global/shop.css">
+    <link rel="stylesheet" href="/css/pages/support.css">
 {% endblock %}
 
 {% block content %}
-<section class="section">
-    <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">Support & Help</h1>
-    </div>
-</section>
+    <section class="section">
+        <div class="container">
+            <h1 class="is-size-1 has-text-weight-bold mt-6">Support & Help</h1>
+        </div>
+    </section>
 
 
-<section class='section'>
-    <div class="container">
-        <form class="form-horizontal" action="/support" method="POST">
-            {{ form.csrf_token }}
-            <fieldset>
-                <div class="field">
-                    <label class="label">What can we help you with?</label>
-                    <div class="control">
-                        {{ form.support_type(id="support_type", type="select", class="input") }}
-                        <ul>
-                            {% for error in form.support_type.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                            {% endfor %}
-                        </ul>
+    <section class='section'>
+        <div class="container">
+            <form class="form-horizontal" action="/support" method="POST">
+                {{ form.csrf_token }}
+                <fieldset>
+                    <div class="field">
+                        <label class="label">What can we help you with?</label>
+                        <div class="control">
+                            {{ form.support_type(id="support_type", type="select", class="input") }}
+                            <ul>
+                                {% for error in form.support_type.errors %}
+                                    <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                </div>
-
-                <div class="field">
-                    <label class="label">Message</label>
-                    <div class="control">
-                        {{ form.content(id="content", type="textarea", class="input", rows="5", style="height:
-                        150px;")}}
-                        <ul>
-                            {% for error in form.content.errors %}
-                            <li class="has-text-danger"> {{ error }}</li>
-                            {% endfor %}
-                        </ul>
+                    <div class="field">
+                        <label class="label" for="tg_link">Tour Guide profile link</label>
+                        <div class="control">
+                            {{ form.tg_link(id="tg_link", type="text", class="input") }}
+                            <ul>
+                                {% for error in form.tg_link.errors %}
+                                    <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                </div>
-                <div class="field">
-                    <label class="label" for="support-submit"></label>
-                    <div class="control">
-                        <input type='submit' value='Submit' id="support-submit" name="support-submit"
-                            class="button is-success is-fullwidth">
+                    <div class="field">
+                        <label class="label">Message</label>
+                        <div class="control">
+                            {{ form.content(id="content", type="textarea", class="input", rows="5", style="height:
+                        150px;") }}
+                            <ul>
+                                {% for error in form.content.errors %}
+                                    <li class="has-text-danger"> {{ error }}</li>
+                                {% endfor %}
+                            </ul>
+                        </div>
                     </div>
-                    {# <div class="control">#}
+                    <div class="field">
+                        <label class="label" for="support-submit"></label>
+                        <div class="control">
+                            <input type='submit' value='Submit' id="support-submit" name="support-submit"
+                                   class="button is-success is-fullwidth">
+                        </div>
+                        {# <div class="control">#}
                         {# <button class="button is-success is-fullwidth">Submit</button>#}
                         {# </div>#}
-                </div>
+                    </div>
 
-            </fieldset>
-        </form>
-    </div>
-</section>
+                </fieldset>
+            </form>
+        </div>
+    </section>
 {% endblock %}
