--- a/templates/setting.html
+++ b/templates/setting.html
@@ -10,11 +10,11 @@
 
 {% block content %}>
 
-<section class="section has-background-white">
-    <div class="container">
-        <h1 class="is-size-1 has-text-weight-bold mt-6">Account Settings & Preferences</h1>
-    </div>
-</section>
+    <section class="section has-background-white">
+        <div class="container">
+            <h1 class="is-size-1 has-text-weight-bold mt-6">Account Settings & Preferences</h1>
+        </div>
+    </section>
 
     <div class="container">
         <div class="columns">
@@ -39,6 +39,17 @@
                     <form class="form-horizontal" action="/me/settings" method="POST">
                         {{ form.csrf_token }}
                         <fieldset>
+                            <div class="field">
+                                <label class="label" for="account_mode">Account Mode</label>
+                                <div class="control">
+                                    {{ form.account_mode(id="account_mode", type="select", class="input") }}
+                                    <ul>
+                                        {% for error in form.account_mode.errors %}
+                                            <li class="has-text-danger"> {{ error }}</li>
+                                        {% endfor %}
+                                    </ul>
+                                </div>
+                            </div>
                             <div class="field">
                                 <label class="label" for="name">Name:</label>
                                 <div class="control">
